more fun with fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Anton|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Loved+by+the+King|Oswald" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -15,6 +15,8 @@
     <p id="line1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni at nam quae adipisci dolores. Distinctio tenetur
         accusamus corrupti ratione odit voluptatum, amet sint id sequi magnam quae velit harum rerum.</p><br>
     <p id="line2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est quia vitae, modi quas rem enim porro, velit iste voluptas placeat quis ad. Nemo libero, est nisi repudiandae possimus et ullam.</p><br>
+    <p id="line3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sequi a deserunt necessitatibus temporibus nulla eos, natus dolores praesentium, molestiae vitae saepe debitis laudantium ullam dolore nihil suscipit. Cumque, tempora.</p>
+
     
 
 </body>
